[package]
name = "beep-evdev"
authors = ["Richard Neumann <mail@richard-neumann.de>"]
description = "Beep the PC speaker using evdev"
license = "MIT"
homepage = "https://github.com/conqp/beep-evdev/"
repository = "https://github.com/conqp/beep-evdev/"
readme = "README.md"
documentation = "https://docs.rs/beep-evdev"
keywords = ["beep", "pcspkr", "evdev"]
version = "0.4.0"
edition = "2021"
exclude = [
    ".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = "0.13"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
